--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,34 +2,20 @@
 <div class="row">
     <h1 class="text-center">New Campground</h1>
     <div class="col-6 offset-3">
-        <form
-            action="/campgrounds"
-            method="POST"
-            novalidate
-            class="validated-form"
-            enctype="multipart/form-data"
-        >
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="title"
-                    name="campground[title]"
-                    required
-                />
-                <div class="valid-feedback">Looks good!</div>
+                <input class="form-control" type="text" id="title" name="campground[title]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    id="location"
-                    name="campground[location]"
-                    required
-                />
-                <div class="valid-feedback">Looks good!</div>
+                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
 
             <!-- <div class="mb-3">
@@ -43,44 +29,27 @@
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="price"
-                        placeholder="0.00"
-                        aria-label="price"
-                        aria-describedby="price-label"
-                        name="campground[price]"
-                        required
-                    />
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
+                        aria-describedby="price-label" name="campground[price]" required>
                 </div>
-                <div class="valid-feedback">Looks good!</div>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea
-                    class="form-control"
-                    type="text"
-                    id="description"
-                    name="campground[description]"
-                    required
-                ></textarea>
-                <div class="valid-feedback">Looks good!</div>
+                <textarea class="form-control" type="text" id="description" name="campground[description]"
+                    required></textarea>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
             </div>
             <div class="mb-3">
                 <div class="form-file custom-file">
-                    <input
-                        type="file"
-                        class="form-file-input"
-                        id="image"
-                        name="image"
-                        multiple
-                    />
+                    <input type="file" class="form-file-input" id="image" name="image" multiple>
                     <label class="form-file-label" for="image">
-                        <span class="form-file-text custom-file-label"
-                            >Choose image(s)...</span
-                        >
+                        <span class="form-file-text custom-file-label">Choose image(s)...</span>
                         <span class="form-file-button">Browse</span>
                     </label>
                 </div>
